--- a/src/layouts/QaMonitoringLayout.module.scss
+++ b/src/layouts/QaMonitoringLayout.module.scss
@@ -1,4 +1,5 @@
-.mainLayout {
+.qaMonitoringLayout {
+  height: 100%;
   padding: 16px 24px 0 24px;
-  background-color: red;
+  background-color: var(--color-surface-low-initial);
 }
