--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,34 +1,3 @@
-html,
-body {
-  font-family: "HelveticaNeueNormal", Arial, sans-serif;
-  font-size: 16px;
-  min-height: 100vh;
-  line-height: 1.5;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
-* {
-  padding: 0;
-  margin: 0;
-}
-
-img,
-picture,
-video,
-canvas,
-svg {
-  display: block;
-  max-width: 100%;
-}
-
 @font-face {
   font-family: "HelveticaNeueNormal";
   src: local("HelveticaNeueNormal"),
@@ -56,4 +25,39 @@ svg {
     local("HelveticaNeueMedium500"),
     url("/src/assets/fonts/Helvetica-Neue/HelveticaNeueMedium500.ttf")
       format("ttf");
+}
+
+html,
+body {
+  font-family: "HelveticaNeueNormal", Arial, sans-serif;
+  font-size: 16px;
+  height: 100vh;
+  line-height: 1.5;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+#root {
+  height: 100%;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+}
+
+img,
+picture,
+video,
+canvas,
+svg {
+  display: block;
+  max-width: 100%;
 }
